@@ -1,3 +1,12 @@
+2012-01-02  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el: Do not use custom-loads for bbdb-mua.el and
+	bbdb-com.el.  Use symbols for custom-loads.
+	(bbdb-utilities-ispell): Group renamed and moved here from
+	bbdb-ispell.el.
+	(bbdb-utilities-print): Group renamed from bbdb-print.
+	(bbdb-utilities-dialing): Group renamed from bbdb-dialing.
+	* lisp/bbdb-ispell.el, lisp/bbdb-print.el: Updated accordingly.
+
 2011-12-18  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-anniv.el (bbdb-anniv-diary-entries): Remove leading
 	and trailing whitespace in text properly.
